Updated DatabaseManager and UserAuth